@@ -31,6 +31,7 @@ import org.apache.commons.logging.LogFactory;
 
 import com.caucho.hessian.client.HessianRuntimeException;
 import com.caucho.hessian.io.HessianProtocolException;
+import com.caucho.hessian.io.SerializerFactory;
 
 /**
  * An ClientConnection that passes messages to a remotely deployed HessianService. It
@@ -56,7 +57,8 @@ public class HessianConnection extends BaseConnection {
 
     protected RemoteSession session;
     protected RemoteService service;
-
+    protected SerializerFactory serializerFactory;
+    
     /**
      * Creates HessianConnection that will establish dedicated session and will not use
      * HTTP basic authentication.
@@ -197,6 +199,9 @@ public class HessianConnection extends BaseConnection {
         factory.setUser(userName);
         factory.setPassword(password);
         factory.setReadTimeout(getReadTimeout());
+
+        this.serializerFactory = factory.getSerializerFactory();
+
         try {
             this.service = (RemoteService) factory.create(RemoteService.class, url);
         }
@@ -268,4 +273,9 @@ public class HessianConnection extends BaseConnection {
 
         return Util.unwindException(th);
     }
+
+    public SerializerFactory getSerializerFactory() {
+        return serializerFactory;
+    }
+
 }
